# zenoh-rpc

./: Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish-artifactory.yml  publish-crates.yml  rust.yml
zenoh-typed/: Cargo.toml
zenoh-typed/examples/: z_pub.rs  z_put.rs  z_sub.rs
zenoh-typed/src/: handlers.rs  lib.rs  publication.rs  session.rs  subscription.rs
znrpc-macros/: Cargo.toml
znrpc-macros/examples/: expanded.rs  znservice.rs
znrpc-macros/src/: lib.rs
znrpc-macros/tests/: service.rs
zrpc/: Cargo.toml
zrpc-derive/: Cargo.toml
zrpc-derive/examples/: service.rs  simplified.rs
zrpc-derive/src/: lib.rs
zrpc-derive/tests/: service.rs
zrpc-macros/: Cargo.toml
zrpc-macros/examples/: expanded-request.rs  expanded.rs  simplified.rs  znservice.rs  zservice.rs  zworking.rs
zrpc-macros/src/: lib.rs
zrpc-macros/tests/: service.rs
zrpc-perf/: Cargo.toml  build.rs  plots.r  run-test.sh
zrpc-perf/src/: lib.rs
zrpc/examples/: check-servers.rs
zrpc/src/: lib.rs  request.rs  response.rs  result.rs  rpcchannel.rs  serialize.rs  server.rs  service.rs  status.rs  types.rs  zchannel.rs  znchannel.rs  zrchannel.rs  zrpcresult.rs
