#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK fog05 team, <fog05@adlink-labs.tech>
#
[workspace]
resolver = "2"

members = ["zrpc", "zrpc-derive"]

exclude = ["zenoh-typed", "zrpc-perf"]

[workspace.package]
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
categories = ["network-programming"]
description = "Framework for decentralized and distributed microservices over Zenoh."
edition = "2021"
homepage = "https://github.com/ZettaScaleLabs/zenoh-rpc"
license = " EPL-2.0 OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ZettaScaleLabs/zenoh-rpc"
version = "0.8.5-dev"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"

[workspace.dependencies]
Inflector = "0.11"
async-trait = "0.1.79"
base64 = "0.22.0"
bincode = { version = "1.3.3" }
clap = { version = "4.4.11", features = ["derive"] }
darling = "0.20"
env_logger = "0.11.0"
flume = { version = "0.11" }
futures = "0.3.28"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_cbor = { version = "0.11.2" }
serde_derive = "1.0.160"
serde_json = { version = "1.0.114" }
serde_yaml = { version = "0.9" }
syn = { version = "2.0", features = ["full", "visit-mut"] }
syn-serde = { version = "0.3", features = ["json"] }
thiserror = "1.0"
tokio = { version = "1.35.1", default-features = false, features = [
  "macros",
  "rt",
  "time",
] }
tracing = "0.1"
zenoh = { version = "1.0.3", default-features = false }
zenoh-codec = { version = "1.0.3" }
zenoh-core = { version = "1.0.3" }
zenoh-ext = { version = "1.0.3" }
zenoh-macros = { version = "1.0.3" }
zenoh-protocol = { version = "1.0.3" }
zenoh-util = { version = "1.0.3" }
