[package]
name = "zenoh-typed"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
base64 = "0.21.0"
bincode = { version = "=1.3.3", optional = true }

flume = { version = "=0.10" }
futures = "0.3.28"
log = "=0.4"
serde = { version = "=1.0.160", features = ["derive"] }
serde_cbor = { version = "=0.11.2" }
serde_derive = "=1.0.160"
thiserror = "=1.0"
zenoh = { workspace = true }
zenoh-util = { workspace = true }
zenoh-codec = { workspace = true }
zenoh-core = { workspace = true }
zenoh-macros = { workspace = true }
zenoh-protocol = {workspace = true }

[dev-dependencies]
clap = "4.4.11"
env_logger = "0.11.2"

[features]
#zenoh feature re-exports
auth_pubkey = ["zenoh/auth_pubkey"]
auth_usrpwd = ["zenoh/auth_usrpwd"]
complete_n = ["zenoh/complete_n"]
shared-memory = ["zenoh/shared-memory"]
stats = ["zenoh/stats"]
transport_quic = ["zenoh/transport_quic"]
transport_tcp = ["zenoh/transport_tcp"]
transport_tls = ["zenoh/transport_tls"]
transport_udp = ["zenoh/transport_udp"]
transport_unixsock-stream = ["zenoh/transport_unixsock-stream"]
transport_ws = ["zenoh/transport_ws"]

query_payload = ["zenoh/unstable"]


default = ["transport_tcp", "transport_udp", "query_payload"]
