[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "zenoh-typed"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true, optional = true }
flume = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_derive = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-std","io-util", "rt-multi-thread"]}
zenoh = { workspace = true }
zenoh-codec = { workspace = true }
zenoh-core = { workspace = true }
zenoh-macros = { workspace = true }
zenoh-protocol = { workspace = true }
zenoh-util = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
env_logger = { workspace = true }

[features]
#zenoh feature re-exports
auth_pubkey = ["zenoh/auth_pubkey"]
auth_usrpwd = ["zenoh/auth_usrpwd"]
shared-memory = ["zenoh/shared-memory"]
stats = ["zenoh/stats"]
transport_quic = ["zenoh/transport_quic"]
transport_tcp = ["zenoh/transport_tcp"]
transport_tls = ["zenoh/transport_tls"]
transport_udp = ["zenoh/transport_udp"]
transport_unixsock-stream = ["zenoh/transport_unixsock-stream"]
transport_ws = ["zenoh/transport_ws"]

query_payload = ["zenoh/unstable"]

default = ["query_payload", "transport_tcp", "transport_udp"]
