[package]
name = "zrpc-macros"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To build with debug on macros: RUSTFLAGS="-Z macro-backtrace"

[dependencies]
Inflector = "=0.11"
async-std = { version = "=1.12.0", features = ["attributes"] }
base64 = "=0.20.0"
darling = "=0.14"
futures = "=0.3.25"
log = "=0.4"
proc-macro2 = "=1.0.56"
quote = "=1.0.26"
serde = { version = "=1.0.151", features = ["derive"] }
serde_derive = "=1.0.151"
syn = { version = "=1.0.107", features = ["full", "visit-mut"] }
syn-serde = { version = "=0.2", features = ["json"] }
uhlc = "=0.5"
uuid = { version = "=1.2.2", features = ["serde", "v4"] }
zenoh = { version = "=0.7.0-rc", default-features = false }
zenoh-util = { version = "=0.7.0-rc" }
zrpc = { version = "0.6.1-alpha.1", path = "../zrpc" }

[dev-dependencies]
serde_json = "1"
env_logger = "=0.10.0"

[lib]
proc-macro = true
