#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "zrpc-perf"
version = "0.5.0-alpha1"
repository = "https://github.com/eclipse-fog05/fog05"
homepage = "http://fog05.io"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
description = "fog05: The End-to-End Compute, Storage and Networking Virtualisation solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To build with debug on macros: RUSTFLAGS="-Z macro-backtrace"

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
futures = "0.3.5"
syn = { version = "1.0.11", features = ["full"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "api-changes"}
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "api-changes" }
zrpc = {path = "../zrpc"}
zrpc-macros = {path = "../zrpc-macros"}
base64 = "0.13.0"
log = "0.4.11"
uuid = { version = "1.1", features = ["serde", "v4"] }
darling = "0.14"
Inflector = "0.11.4"
bincode = "1.3.1"
serde_json = "1.0.55"
env_logger = "0.9.0"
clap = "3.2"
structopt = "0.3.13"
uhlc = "0.5"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.2.0", features = ["macros", "rt", "rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.8"


[profile.release]
debug=false
lto="fat"
codegen-units=1
opt-level=3
panic="abort"