[package]
name = "zrpc-perf"
version = "0.5.1-alpha1"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
categories = ["network-programming"]
description = "Zenoh-Flow: a Zenoh-based data flow programming framework for computations that span from the cloud to the device."
edition = "2018"
homepage = "https://github.com/ZettaScaleLabs/zenoh-rpc"
license = " EPL-2.0 OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ZettaScaleLabs/zenoh-rpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To build with debug on macros: RUSTFLAGS="-Z macro-backtrace"

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
futures = "0.3.5"
syn = { version = "1.0.11", features = ["full"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master"}
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
zrpc = {path = "../zrpc"}
zrpc-macros = {path = "../zrpc-macros"}
base64 = "0.13.0"
log = "0.4.11"
uuid = { version = "1.1", features = ["serde", "v4"] }
darling = "0.14"
Inflector = "0.11.4"
bincode = "1.3.1"
serde_json = "1.0.55"
env_logger = "0.9.0"
clap = "3.2"
structopt = "0.3.13"
uhlc = "0.5"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.2.0", features = ["macros", "rt", "rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.8"


[profile.release]
debug=false
lto="fat"
codegen-units=1
opt-level=3
panic="abort"