[package]
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
categories = ["network-programming"]
description = "Framework for decentralized and distributed microservices over Zenoh."
edition = "2021"
homepage = "https://github.com/ZettaScaleLabs/zenoh-rpc"
license = " EPL-2.0 OR Apache-2.0"
name = "zrpc-perf"
readme = "README.md"
repository = "https://github.com/ZettaScaleLabs/zenoh-rpc"
version = "0.6.0-alpha1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To build with debug on macros: RUSTFLAGS="-Z macro-backtrace"

[dependencies]
Inflector = "0.11.4"
async-std = { version = "=1.12.0", features = ["attributes"] }
base64 = "0.20.0"
bincode = "1.3.1"
clap = "4.0"
darling = "0.14"
env_logger = "0.10.0"
futures = "0.3.5"
log = "0.4.11"
proc-macro2 = "1.0.6"
prost = "0.11"
quote = "1.0.2"
serde = { version = "1.0.55", features = ["derive"] }
serde_derive = "1.0.55"
serde_json = "1.0.55"
structopt = "0.3.13"
syn = { version = "1.0.11", features = ["full"] }
tokio = { version = "1.2.0", features = ["macros", "rt", "rt-multi-thread"] }
tonic = "0.8"
uhlc = "0.5"
uuid = { version = "1.1", features = ["serde", "v4"] }
zenoh = { version = "=0.7.0-rc", default-features = false }
zenoh-util = { version = "=0.7.0-rc" }
zrpc = { version = "0.6.0-alpha1", path = "../zrpc" }
zrpc-macros = { version = "0.6.0-alpha1", path = "../zrpc-macros" }

[build-dependencies]
tonic-build = "0.8"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
