[package]
name = "zrpc"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
base64 = "0.21.0"
bincode = { version = "=1.3.3", optional = true }
flume = { version = "=0.10" }
futures = "0.3.28"
log = "=0.4"
serde = { version = "=1.0.160", features = ["derive"] }
serde_cbor = { version = "=0.11.2", optional = true }
serde_derive = "=1.0.160"
serde_json = { version = "=1", optional = true }
serde_yaml = { version = "=0.9", optional = true }
thiserror = "=1.0"
uuid = { version = "=1.3.1", features = ["serde", "v4"] }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "master", default-features = false }
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "master" }

[features]
#zenoh feature re-exports
auth_pubkey = ["zenoh/auth_pubkey"]
auth_usrpwd = ["zenoh/auth_usrpwd"]
complete_n = ["zenoh/complete_n"]
shared-memory = ["zenoh/shared-memory"]
stats = ["zenoh/stats"]
transport_quic = ["zenoh/transport_quic"]
transport_tcp = ["zenoh/transport_tcp"]
transport_tls = ["zenoh/transport_tls"]
transport_udp = ["zenoh/transport_udp"]
transport_unixsock-stream = ["zenoh/transport_unixsock-stream"]
transport_ws = ["zenoh/transport_ws"]

query_payload = ["zenoh/unstable"]

resp_bincode = ["bincode"]
send_bincode = ["bincode"]

send_json = ["serde_json"]
resp_json = ["serde_json"]

resp_cbor = ["serde_cbor"]
send_cbor = ["serde_cbor"]

state_bincode = ["bincode"]
state_json = ["serde_json"]
state_cbor = ["serde_cbor"]

router_json = ["serde_json"]

default = ["resp_json", "send_json", "state_json", "router_json", "transport_tcp", "transport_udp", "query_payload"]