[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "zrpc"
readme.workspace = true
repository.workspace = true
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true, optional = true }
flume = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true, optional = true }
serde_derive = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
thiserror = { workspace = true }
zenoh = { workspace = true }
zenoh-util = { workspace = true }

[features]
#zenoh feature re-exports
auth_pubkey = ["zenoh/auth_pubkey"]
auth_usrpwd = ["zenoh/auth_usrpwd"]
shared-memory = ["zenoh/shared-memory"]
stats = ["zenoh/stats"]
transport_quic = ["zenoh/transport_quic"]
transport_tcp = ["zenoh/transport_tcp"]
transport_tls = ["zenoh/transport_tls"]
transport_udp = ["zenoh/transport_udp"]
transport_unixsock-stream = ["zenoh/transport_unixsock-stream"]
transport_ws = ["zenoh/transport_ws"]

query_payload = ["zenoh/unstable"]

resp_bincode = ["bincode"]
send_bincode = ["bincode"]

resp_json = ["serde_json"]
send_json = ["serde_json"]

resp_cbor = ["serde_cbor"]
send_cbor = ["serde_cbor"]

state_bincode = ["bincode"]
state_cbor = ["serde_cbor"]
state_json = ["serde_json"]

router_json = ["serde_json"]

default = [
  "query_payload",
  "resp_json",
  "router_json",
  "send_json",
  "state_json",
  "transport_tcp",
  "transport_udp",
]
